# codex-ipad-agent

./: .gitignore  .goreleaser.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: claude-bridge-ci.yml  go-ci.yml  ios-ci.yml  mimi-testflight.yml  release.yml
artifacts/app-screenshots/: manifest.md
bridges/claude/: README.md  UPSTREAM.md
bridges/claude/crates/bridge-core/: Cargo.toml
bridges/claude/crates/bridge-core/src/: codex_resolver.rs  envelope.rs  framing.rs  git_info.rs  launch_environment.rs  launcher.rs  lib.rs  notify.rs  pool.rs  server.rs  state.rs  thread_index.rs
bridges/claude/crates/bridge-core/src/codex_resolver/: posix_resolve_codex_binary.sh  powershell_resolve_codex_binary.ps1
bridges/claude/crates/bridge-core/src/session/: mod.rs  registry.rs  ring.rs
bridges/claude/crates/bridge-core/tests/: jsonrpc_core.rs  launcher.rs  session_resilience.rs  thread_index.rs
bridges/claude/crates/claude-bridge/: Cargo.toml
bridges/claude/crates/claude-bridge/src/: approval.rs  bridge.rs  lib.rs  main.rs  server.rs  state.rs
bridges/claude/crates/claude-bridge/src/handlers/: command_exec.rs  config.rs  lifecycle.rs  mcp.rs  mod.rs  model.rs  skills.rs  thread.rs  turn.rs
bridges/claude/crates/claude-bridge/src/index/: claude_session_scan.rs  mod.rs
bridges/claude/crates/claude-bridge/src/pool/: claude_protocol.rs  mod.rs  process.rs
bridges/claude/crates/claude-bridge/src/translate/: events.rs  input.rs  items.rs  mod.rs  tool_call.rs
bridges/claude/crates/claude-bridge/tests/: fake_claude_smoke.rs  smoke_binary.rs  smoke_in_process.rs  wire_compat.rs
bridges/claude/crates/claude-bridge/tests/smoke/: README.md  stdio_smoke.sh
bridges/claude/crates/claude-bridge/tests/support/: fake_claude.rs  mod.rs
bridges/claude/crates/codex-proto/: Cargo.toml
bridges/claude/crates/codex-proto/src/: account.rs  command_exec.rs  common.rs  config.rs  items.rs  jsonrpc.rs  lib.rs  lifecycle.rs  mcp.rs  model.rs  notifications.rs  skills.rs  thread.rs  turn.rs
config/release/: ios-testflight.local.env
docs/: claude-bridge-architecture.md  codex-protocol-support.md  install-upgrade-rollback.md  litter-comparison.md  local-testflight.md  open-source-release.md  p0-p1-roadmap.md  project-status.md  relay-bandwidth-request-control.md
internal/claudebridge/: version.go  version_test.go
internal/doctor/: doctor_test.go
internal/httpapi/: appserver_gateway.go  appserver_gateway_test.go  claude_gateway.go  git_publish.go  router.go  router_test.go
ios/MimiRemote/: README.md  project.yml
ios/MimiRemote/MimiRemote.xcodeproj/: project.pbxproj
ios/MimiRemote/Resources/: Info.plist
ios/MimiRemote/Sources/: RootView.swift
ios/MimiRemote/Sources/Core/API/: AgentAPIClient.swift  CodexAppServerEventProjection.swift  CodexAppServerSessionRuntime.swift
ios/MimiRemote/Sources/Core/Models/: APIResponses.swift  AgentEvent.swift  AgentModels.swift  AgentRuntimeModels.swift
ios/MimiRemote/Sources/Features/Conversation/: ComposerState.swift  ComposerView.swift  ConversationLayout.swift  ConversationView.swift  MarkdownBlockView.swift  ModelReasoningGridPicker.swift
ios/MimiRemote/Sources/Features/Inspector/: DiffPanelView.swift  GitQuickPublishView.swift  SessionContextSidebarView.swift  SessionInspectorView.swift
ios/MimiRemote/Sources/Features/Projects/: ProjectSidebarView.swift  WorkspaceRootView.swift
ios/MimiRemote/Sources/Features/Sessions/: SessionListView.swift
ios/MimiRemote/Sources/Features/Settings/: SettingsView.swift
ios/MimiRemote/Sources/Features/Shell/: UnifiedWorkbenchShell.swift
ios/MimiRemote/Sources/State/: AppStore.swift  ConversationStore.swift  EventReducer.swift  SessionStore.swift  SessionStoreLifecycleWorkspaces.swift  SessionStoreTurns.swift  ThemeStore.swift
ios/MimiRemote/Tests/MimiRemoteTests/: CodexAppServerProtocolTests.swift  ConversationDataFlowTests.swift  ConversationDirectRuntimeHistoryTests.swift  ConversationRuntimeFlowTests.swift  ConversationSnapshotTests.swift  GitQuickPublishTests.swift  SkillModelPickerSnapshotTests.swift  ThemeStoreTests.swift
packaging/public/: .gitignore  NOTICE.md  README.md  check-third-party-notices.sh
scripts/: check-packaging.sh  check-public-repo-safety.sh  check-release-prerequisites.sh  check-third-party-notices.sh  export-public-backend.sh  git-testflight-push  ios_testflight_local.sh  ipad-ws-probe.go  ipad_ws_probe_test.go  verify-release.sh
