[workspace]
members = [
    "bridges/claude/crates/bridge-core",
    "bridges/claude/crates/claude-bridge",
    "bridges/claude/crates/codex-proto",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["The Alleycat Authors"]
repository = "https://github.com/gaixianggeng/codex-ipad-agent"
homepage = "https://github.com/gaixianggeng/codex-ipad-agent"
readme = "README.md"

[workspace.dependencies]
alleycat-bridge-core = { path = "bridges/claude/crates/bridge-core", version = "0.1" }
alleycat-codex-proto = { path = "bridges/claude/crates/codex-proto", version = "0.1" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
directories = "5"
futures = "0.3"
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }

[profile.release]
lto = "thin"
