[package]
name = "alleycat-bridge-core"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shared JSON-RPC framing, server scaffolding, and notification plumbing for alleycat coding-agent bridges."

[lib]
name = "alleycat_bridge_core"
path = "src/lib.rs"

[dependencies]
alleycat-codex-proto = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = "6"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std", "process", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
